--- a/main.html
+++ b/main.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
+	<header>
 	<nav>
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About us</a></li>
-			<li>
-				<a href="#">Contact us</a>
-			</li>
+			<li><a href="#">Contact us</a></li>
 			
 		</ul>
 	</nav>
+	</header>
 	<h1>3 random videos</h1>
 	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
 	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
