--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About us</a></li>
-			<li><a href="#">Contact us</a></li>
+			<li><a href="#">"Home"</a></li>
+			<li><a href="#">"About us"</a></li>
+			<li><a href="#">"Contact us"</a></li>
 			
 		</ul>
 	</nav>
